--- a/qy_dl.html
+++ b/qy_dl.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>求职——登录</title>
 </head>
 <body>
+<div id="header">
+    <div class="header_a">
 
+    </div>
+</div>
 </body>
 </html>
