人才热线个人主页收到的消息

--- a/gezy_sdxx谌锐铖.html
+++ b/gezy_sdxx谌锐铖.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Message</title>
+    <title>Message 谌锐铖</title>
     <link rel="stylesheet" href="css/message谌锐铖.css">
 </head>
 <body>
-<div class="bg">
+<div class="backg">
     <div class="head">
         <div class="fk">
             <div>
