提交我做的职位详情

--- a/zwxq.html
+++ b/zwxq.html
@@ -14,13 +14,19 @@
             </div>
             <div class="header_zhongtwo">
                 <ul>
-                    <li>首页</li>
+                    <li id="gb">首页</li>
                     <li id="gs">公司</li>
-                    <li>我的简历</li>
+                    <li id="ga">我的简历</li>
                 </ul>
             </div>
         </div>
-        <div class="header_right">364164322...</div>
+        <div class="header_right" >
+            <ul id="gc">
+                <li id="hf">登录</li>
+                <li>|</li>
+                <li id="hn">注册</li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="body">
