--- a/zwxq.html
+++ b/zwxq.html
@@ -34,7 +34,7 @@
         <div class="logoz">
             <div class="logo">
                 <ul>
-                    <li class="xz">卷皮招聘</li>
+                    <li class="xhz">卷皮招聘</li>
                     <li class="dz">PHP开发（深圳）</li>
                 </ul>
             </div>
