--- a/grzy_sc.html
+++ b/grzy_sc.html
@@ -2,9 +2,138 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>收藏的职位</title>
+    <link href="css/grzy_sc.css" rel="stylesheet">
 </head>
 <body>
+<!--<div id="pop">-->
+<div id="dzl">
+
+    <div class="a">
+        <span class="a1"><img src="images/logo_02.jpg" ></span>
+        <ul>
+            <li><a href="#">首页</a></li>
+            <li><a href="#">公司</a></li>
+            <li><a href="#">我的简历</a></li>
+        </ul>
+        <select class="b">
+            <option>364164860...</option>
+        </select>
+    </div>
+</div>
+<div id="box">
+    <div class="w">
+        <ul>
+            <li class="a2">
+                <img src="images/touxiang.png">个人中心
+            </li>
+            <li class="q">1359***3285</li>
+            <li>我的面试</li>
+            <li>我的简历</li>
+            <li>收到的消息</li>
+            <li>修改密码</li>
+            <li>关注企业</li>
+            <li>收藏的职位</li>
+            <li>投递的简历</li>
+        </ul>
+    </div>
+
+
+<div id="dw">
+    <div class="q1">
+    <ul>
+        <li class="b1">收藏的职位</li>
+        <li class="b2"></li>
+    </ul>
+    </div>
+    <div class="wd">
+        <div class="c1"><img src="images/logo_hw.png">
+        </div>
+        <div class="c1">
+            <p class="c3"><span class="wq1"> PHP工程师</span><span class="wq2"> （8k-15k）</span></p>
+            <p class="c3">华为/广州/1-3年/本科</p>
+            <p class="c3">早九晚六,周末双休,加班补助</p>
+        </div>
+        <div class="c1">
+            <div class="c2">
+            <p style="padding-left: 100px"><span class="wq3">发布时间：2015-05-21 13:35</span></p>
+            <p style="padding-left: 140px"><span class="wq1">投递简历</span> | <span class="wq1">取消收藏</span></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="wd">
+        <div class="c1"><img src="images/logo_hw.png">
+        </div>
+        <div class="c1">
+            <p class="c3"><span class="wq1"> PHP工程师</span><span class="wq2"> （8k-15k）</span></p>
+            <p class="c3">华为/广州/1-3年/本科</p>
+            <p class="c3">早九晚六,周末双休,加班补助</p>
+        </div>
+        <div class="c1">
+            <div class="c2">
+                <p style="padding-left: 100px"><span class="wq3">发布时间：2015-05-21 13:35</span></p>
+                <p style="padding-left: 140px"><span class="wq1">投递简历</span> | <span class="wq1">取消收藏</span></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="wd">
+        <div class="c1"><img src="images/logo_hw.png">
+        </div>
+        <div class="c1">
+            <p class="c3"><span class="wq1"> PHP工程师</span><span class="wq2"> （8k-15k）</span></p>
+            <p class="c3">华为/广州/1-3年/本科</p>
+            <p class="c3">早九晚六,周末双休,加班补助</p>
+        </div>
+        <div class="c1">
+            <div class="c2">
+                <p style="padding-left: 100px"><span class="wq3">发布时间：2015-05-21 13:35</span></p>
+                <p style="padding-left: 140px"><span class="wq1">投递简历</span> | <span class="wq1">取消收藏</span></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="wd">
+        <div class="c1"><img src="images/logo_hw.png">
+        </div>
+        <div class="c1">
+            <p class="c3"><span class="wq1"> PHP工程师</span><span class="wq2"> （8k-15k）</span></p>
+            <p class="c3">华为/广州/1-3年/本科</p>
+            <p class="c3">早九晚六,周末双休,加班补助</p>
+        </div>
+        <div class="c1">
+            <div class="c2">
+                <p style="padding-left: 100px"><span class="wq3">发布时间：2015-05-21 13:35</span></p>
+                <p style="padding-left: 140px"><span class="wq1">投递简历</span> | <span class="wq1">取消收藏</span></p>
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="ooo">
+        <ul>
+            <li class="bottom_a">上一页</li>
+            <li class="bottom_b">1</li>
+            <li class="bottom_b">2</li>
+            <li class="bottom_b">3</li>
+            <li class="bottom_b">...</li>
+            <li class="bottom_b">6</li>
+            <li class="bottom_a">下一页</li>
+
+        </ul>
+        </div>
+    </div>
+    </div>
+</div>
+    <div class="d1">
+        <div id="zlq"></div>
+    </div>
+
+
+<!--</div>-->
+
+
+
 
 </body>
 </html>
