--- a/zwxq.html
+++ b/zwxq.html
@@ -85,15 +85,15 @@
         </div>
         <div class="mk">
             <ul>
-                <li>投递简历</li>
+                <li id="aa">投递简历</li>
                 <li id="hs">收藏职位</li>
             </ul>
         </div>
         <div>
             <div class="mk1">
                 <ul>
-                    <li>投递简历</li>
-                    <li>取消收藏</li>
+                    <li id="bb">投递简历</li>
+                    <li id="cc">取消收藏</li>
                 </ul>
             </div>
         </div>
