--- a/wdjl.html
+++ b/wdjl.html
@@ -5,6 +5,99 @@
     <title>Title</title>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>个人主页_我的面试</title>
+    <link href="css/wdjl.html.css" rel="stylesheet">
+</head>
+<body>
+<div id="biggerdiv">
+    <div class="onediv">
+        <div class="tu_div"><img src="images/logo_02.jpg"></div>
+        <div class="ul_div">
+             <ul >
+                <li class="oneli">首页</li>
+                <li>公司</li>
+                <li class="fourli">我的简历</li>
+            </ul>
+        </div>
+        <div class="twodiv">
+                <select>
+                    <option>13590458...</option>
+                    <option>我的简历</option>
+                    <option>我的面试</option>
+                    <option>收到的消息</option>
+                    <option>修改密码</option>
+                    <option>关注的企业</option>
+                    <option>收藏的职位</option>
+                    <option>退出</option>
+                </select>
+        </div>
+    </div>
+</div>
+<div id="bigdiv">
+    <div id="threediv">
+        <ul class="threeul" >
+            <li class="threeli"><img src="images/ASSLQ5G%60FCAD%25TD6~4HN6R5.jpg">&nbsp;个人中心</li>
+            <li class="eightli">1359***3285</li>
+            <li class="twoli">我的面试</li>
+            <li class="sevenli">我的简历</li>
+            <li class="twoli">收到的消息</li>
+            <li class="twoli">修改密码</li>
+            <li class="twoli">关注的企业</li>
+            <li class="twoli">收藏的职位</li>
+        </ul>
+    </div>
+    <div id="fourdiv">
+        <div id="fivediv">我的简历</div>
+        <div id="sixdiv"></div>
+        <div id="sevendiv">个人信息（*为必填项）</div>
+        <div id="eightdiv">
+            <ul>
+                <li><div class="listyle">&nbsp;&nbsp;&nbsp;*姓名: 陈小姐</div> <div class="li_style">&nbsp;*手机号: 13259963258</div></li>
+                <li><div class="listyle">&nbsp;&nbsp;&nbsp;*性别: 女</div>                    <div class="li_style">*婚姻状况: 未婚</div></li>
+                <li><div class="listyle">&nbsp; 身份证号: 350825199106212626</div> <div class="li_style">*工作经验: 2年以上</div></li>
+                <li><div class="listyle">&nbsp;*出生年月: 1991-06-11</div>        <div class="li_style">*到岗日期: 随时</div></li>
+                <li><div class="listyle">&nbsp;*现住地址: 广东省|深圳市|南山区</div> <div class="li_style">*电子邮箱: 51465468@163.com</div></li>
+                <li><div class="listyle">&nbsp;&nbsp;&nbsp;*籍贯: 福建-龙岩</div>              <div class="li_style">&nbsp;&nbsp;&nbsp; QQ: 660645498</div></li>
+                <li><div class="listyle">&nbsp;*最高学历: 大专 </div>          <div class="li_style">其他 电话: 8620638</div> </li>
+            </ul>
+        </div>
+        <div class="ninediv">教育经历（*为必填项）    <span class="onespan"><img src="images/auwq.jpg">添加</span></div>
+        <div class="tendiv">
+            <ul>
+                <li>2009.09-2013.07</li>
+                <li>华南师范大学</li>
+                <li>本科</li>
+                <li>艺术设计</li>
+                <li><span><img src="images/eioq.jpg">修改</span></li>
+            </ul>
+        </div>
+        <div class="ninediv">工作经历（*为必填项）    <span class="onespan"><img src="images/auwq.jpg">添加</span></div>
+        <div class="tendiv">
+            <ul>
+                <li>2014.09-2015.07</li>
+                <li>泽林信息咨询有限公司</li>
+                <li>技术部</li>
+                <li>网页设计师</li>
+                <li><span><img src="images/eioq.jpg">修改</span></li>
+            </ul>
+        </div>
+        <div class="tendiv">
+            <ul>
+                <li>2014.09-2015.07</li>
+                <li>泽林信息咨询有限公司</li>
+                <li>技术部</li>
+                <li>网页设计师</li>
+                <li><span><img src="images/eioq.jpg">修改</span></li>
+            </ul>
+        </div>
+    </div>
 
+</div>
+</body>
+</html>
 </body>
 </html>
