--- a/zwxq.html
+++ b/zwxq.html
@@ -86,7 +86,7 @@
         <div class="mk">
             <ul>
                 <li id="aa">投递简历</li>
-                <li id="hs">收藏职位</li>
+                <li id="hy">收藏职位</li>
             </ul>
         </div>
         <div>
