职位详情甘灿明

--- a/zwxq.html
+++ b/zwxq.html
@@ -150,7 +150,7 @@
             <div class="lll"></div>
             <div class="hk">
                 <div class="hk_a">
-                    <div class="hk_a_one"><img src="images/mw.jpg"></div>
+                    <div class="hk_a_one"><img src="images/hr.jpg"></div>
                     <div class="hk_a_two">
                         <ul>
                             <li class="pp">PHP</li>
@@ -163,7 +163,7 @@
 
 
                 <div class="hk_b">
-                    <div class="hk_b_one"><img src="images/mw.jpg"></div>
+                    <div class="hk_b_one"><img src="images/hr.jpg"></div>
                     <div class="hk_b_two">
                         <ul>
                             <li class="pp1">PHP</li>
@@ -176,7 +176,7 @@
 
 
                 <div class="hk_c">
-                    <div class="hk_c_one"><img src="images/mw.jpg"></div>
+                    <div class="hk_c_one"><img src="images/hr.jpg"></div>
                     <div class="hk_c_two">
                         <ul>
                             <li class="pp2">PHP</li>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="hk_d">
-                    <div class="hk_d_one"><img src="images/mw.jpg"></div>
+                    <div class="hk_d_one"><img src="images/hr.jpg"></div>
                     <div class="hk_d_two">
                         <ul>
                             <li class="pp3">PHP</li>
