聂惠良 改完了

--- a/sy.html
+++ b/sy.html
@@ -207,11 +207,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!--------------------------------------------->
@@ -227,11 +227,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -247,11 +247,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -267,11 +267,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -287,11 +287,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -307,11 +307,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -327,11 +327,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
         <!------------------------------------------>
@@ -347,11 +347,11 @@
             </div>
             <p class="righter_1_b">"员工旅游，年底多薪，五险一金，氛围好"</p>
             <div class="righter_1_c">
-                <ul>
-                    <li class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</li>
-                    <li class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</li>
-                    <li class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</li>
-                </ul>
+
+                    <p class="righter_1_c_1"><img src="images/ic_1.jpg"> 大专</p>
+                    <p class="righter_1_c_2"><img src="images/ic_2.jpg"> 1/3年</p>
+                    <p class="righter_1_c_3"><img src="images/ic_3.jpg"> 深圳-福田</p>
+
             </div>
         </div>
     </div>
