收到的消息谌锐铖

--- a/gezy_sdxx.html
+++ b/gezy_sdxx.html
@@ -8,29 +8,26 @@
 
 <div class="back">
     <div class="head">
-        <div>
-            <ul class="ko">
-                <li><img src="images/logo_02.jpg"></li>
-                <li class="sho">首页
-                <li>
-                <li class="gs">公司
-                <li>
-                <li class="wo">我的简历
-                <li>
-                <li class="head_right"></li>
-                <select>
-                    <option>13590458...</option>
-                    <option>我的简历</option>
-                    <option>我的面试</option>
-                    <option>收到的消息</option>
-                    <option>修改密码</option>
-                    <option>关注的企业</option>
-                    <option>收藏的职位</option>
-                    <option>退出</option>
-                </select>
-                </li>
+
+           <div class="tu"><img src="images/logo_02.jpg"></div>
+                <ul class="ko">
+                    <li class="sho">首页</li>
+                    <li class="gs">公司</li>
+                    <li class="wo">我的简历</li>
             </ul>
-        </div>
+            <div class="head_right">
+            <select>
+                <option>13590458...</option>
+                <option>我的简历</option>
+                <option>我的面试</option>
+                <option>收到的消息</option>
+                <option>修改密码</option>
+                <option>关注的企业</option>
+                <option>收藏的职位</option>
+                <option>退出</option>
+            </select>
+            </div>
+
     </div>
 
 </div>
@@ -129,7 +126,7 @@
                 <ul class="bott">
                     <li id="bzi">上一页</li>
                     <li class="yellow">1</li>
-                    <li>2</li>
+                    <li class="er">2</li>
                     <li id="san">3</li>
                     <li id="sheng">...</li>
                     <li id="liu">6</li>
