--- a/gxzy.html
+++ b/gxzy.html
@@ -21,7 +21,9 @@
             </div>
         </div>
         <div class="head_right">
-            <p>登陆&nbsp; |&nbsp; 注册</p>
+            <p>
+                <a href="#">登陆</a>&nbsp; |&nbsp; <a href="#">注册</a>
+            </p>
         </div>
     </div>
 </div>
@@ -202,12 +204,12 @@
         <div class="body_left_last">
             <ul>
                 <li id="ww">上一页</li>
-                <li id="wo">1</li>
-                <li>2</li>
-                <li>3</li>
+                <li id="one">1</li>
+                <li id="two">2</li>
+                <li id="three">3</li>
                 <li id="wc">...</li>
-                <li>6</li>
-                <li>下一页</li>
+                <li id="six">6</li>
+                <li id="www">下一页</li>
             </ul>
         </div>
     </div>
