--- a/qy_qz.html
+++ b/qy_qz.html
@@ -21,7 +21,9 @@
             </div>
         </div>
         <div class="head_right">
-            <p>企业HR&nbsp; |&nbsp; 求职者</p>
+            <p>
+                <a href="#">企业HR</a>&nbsp; |&nbsp; <a href="#">求职者</a>
+            </p>
         </div>
     </div>
 </div>
